@@ -1,8 +1,14 @@
 Noteworthy changes in version 2.4.1 (unreleased)
 ------------------------------------------------
 
-  * gpg: Make "--list-options show-sig-subpackets" work again.
+  * gpg: New list-option "show-unusable-sigs".
+
+  * gpg: Show "[self-signature]" instead of the user-id in key
+    signature listings.
+
+  * gpg: Make list-options "show-sig-subpackets" work again.
     Fixes regression in 2.4.0.
+
 
 
 Noteworthy changes in version 2.4.0 (2022-12-16)
